[gd_scene load_steps=5 format=3 uid="uid://ckrr6cdh6r0or"]

[ext_resource type="Script" uid="uid://dx7m66pfmbe77" path="res://scripts/inventory_slot.gd" id="1_bxqf6"]
[ext_resource type="Texture2D" uid="uid://t8cyod5vcfvf" path="res://assets/UI/slot_bg.png" id="2_hddt5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hddt5"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxqf6"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1.34766e-06, 0.724599, 0.726678, 1)

[node name="InventorySlot" type="Button"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxqf6")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("2_hddt5")

[node name="Control" type="Control" parent="AspectRatioContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Focus" type="Panel" parent="AspectRatioContainer/Control"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hddt5")

[node name="Selected" type="Panel" parent="AspectRatioContainer/Control"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bxqf6")

[node name="ItemTexture" type="TextureRect" parent="AspectRatioContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.032
anchor_right = 0.968
anchor_bottom = 0.968

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
